--- a/index.html
+++ b/index.html
@@ -6,52 +6,56 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="header-image" src="./eisenhower-matrix.jpg">
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-task">
+    </header>
+    <main class="main">
+      <section id="add-task">
         <label class="label-input" for="new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task"class="input task-input">
           <button class="button">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="list" id="incomplete-tasks">
-        <li class="list-item">
-          <input class="input" type="checkbox">
-          <label class="label-input task-input">Pay Bills</label>
-          <input type="text" class="input task-input">
-          <button class="button task-edit">Edit</button>
-          <button class="button task-delete">
-            <img class="button-image" src="./remove.svg">
-          </button>
-        </li>
-        <li class="list-item edit-mode">
-          <input class="input" type="checkbox">
-          <label class="label-input task-input">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input task-input">
-          <button class="button task-edit">Save</button>
-          <button class="button task-delete">
-            <img class="button-image" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="list" id="completed-tasks">
-        <li class="list-item">
-          <input class="input" type="checkbox" checked>
-          <label class="label-input task-input">See the Doctor</label>
-          <input type="text" class="input task-input">
-          <button class="button task-edit">Edit</button>
-          <button class="button task-delete">
-            <img class="button-image" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3 class="title">Todo</h3>
+        <ul class="list" id="incomplete-tasks">
+          <li class="list-item">
+            <input class="input" type="checkbox">
+            <label class="label-input task-input">Pay Bills</label>
+            <input type="text" class="input task-input">
+            <button class="button task-edit">Edit</button>
+            <button class="button task-delete">
+              <img class="button-image" src="./remove.svg">
+            </button>
+          </li>
+          <li class="list-item edit-mode">
+            <input class="input" type="checkbox">
+            <label class="label-input task-input">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input task-input">
+            <button class="button task-edit">Save</button>
+            <button class="button task-delete">
+              <img class="button-image" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="title">Completed</h3>
+        <ul class="list" id="completed-tasks">
+          <li class="list-item">
+            <input class="input" type="checkbox" checked>
+            <label class="label-input task-input">See the Doctor</label>
+            <input type="text" class="input task-input">
+            <button class="button task-edit">Edit</button>
+            <button class="button task-delete">
+              <img class="button-image" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>      
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
