--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-image" src="./eisenhower-matrix.jpg">
+      <img class="header-image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,7 +27,7 @@
             <input type="text" class="input task-input">
             <button class="button task-edit">Edit</button>
             <button class="button task-delete">
-              <img class="button-image" src="./remove.svg">
+              <img class="button-image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -36,7 +36,7 @@
             <input type="text" value="Go Shopping" class="input task-input">
             <button class="button task-edit">Save</button>
             <button class="button task-delete">
-              <img class="button-image" src="./remove.svg">
+              <img class="button-image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input type="text" class="input task-input">
             <button class="button task-edit">Edit</button>
             <button class="button task-delete">
-              <img class="button-image" src="./remove.svg">
+              <img class="button-image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
         </ul>
