fix: rename class name of done task

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="list section__list section__list_done">
           <li class="item list__item">
             <input class="input item__input" type="checkbox" checked>
-            <label class="list__label list__label_disable">See the Doctor</label>
+            <label class="list__label list__label_done">See the Doctor</label>
             <input class="input list__input" type="text">
             <button class="item__button">Edit</button>
             <button class="button list__button">
