--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="add-task">
-        <label class="label-input" for="new-task">Add Item</label>
-        <div class="task-wrapper">
-          <input id="new-task"class="input task-input">
-          <button class="button">Add</button>
+      <section class="section main__section">
+        <h3 class="section__title">Add Item</h3>
+        <div class="section__wrapper">
+          <input class="input section__input input_add" type="text">
+          <button class="section__button">Add</button>
         </div>
       </section>
-      <section>
-        <h3 class="title">Todo</h3>
-        <ul class="list" id="incomplete-tasks">
-          <li class="list-item">
-            <input class="input" type="checkbox">
-            <label class="label-input task-input">Pay Bills</label>
-            <input type="text" class="input task-input">
-            <button class="button task-edit">Edit</button>
-            <button class="button task-delete">
-              <img class="button-image" src="./remove.svg" alt="delete task button">
+      <section class="section main__section">
+        <h3 class="section__title">Todo</h3>
+        <ul class="list section__list section__list_todo">
+          <li class="item list__item">
+            <input class="input item__input" type="checkbox">
+            <label class="list__label">Pay Bills</label>
+            <input class="input list__input" type="text">
+            <button class="item__button">Edit</button>
+            <button class="button list__button">
+              <img class="button__image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
-          <li class="list-item edit-mode">
-            <input class="input" type="checkbox">
-            <label class="label-input task-input">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="input task-input">
-            <button class="button task-edit">Save</button>
-            <button class="button task-delete">
-              <img class="button-image" src="./remove.svg" alt="delete task button">
+          <li class="item list__item">
+            <input class="input item__input" type="checkbox">
+            <label class="list__label list__label_hidden">Go Shopping</label>
+            <input class="input list__input list__input_edit" type="text" value="Go Shopping">
+            <button class="item__button">Save</button>
+            <button class="button list__button">
+              <img class="button__image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="title">Completed</h3>
-        <ul class="list" id="completed-tasks">
-          <li class="list-item">
-            <input class="input" type="checkbox" checked>
-            <label class="label-input task-input">See the Doctor</label>
-            <input type="text" class="input task-input">
-            <button class="button task-edit">Edit</button>
-            <button class="button task-delete">
-              <img class="button-image" src="./remove.svg" alt="delete task button">
+      <section class="section main__section">
+        <h3 class="section__title">Completed</h3>
+        <ul class="list section__list section__list_done">
+          <li class="item list__item">
+            <input class="input item__input" type="checkbox" checked>
+            <label class="list__label list__label_done">See the Doctor</label>
+            <input class="input list__input" type="text">
+            <button class="item__button">Edit</button>
+            <button class="button list__button">
+              <img class="button__image" src="./remove.svg" alt="delete task button">
             </button>
           </li>
         </ul>
